2009-01-05  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/mxf/mxfaes-bwf.c:
	(mxf_metadata_wave_audio_essence_descriptor_handle_tag),
	(mxf_bwf_create_caps):
	* gst/mxf/mxfdemux.c: (gst_mxf_demux_handle_klv_packet):
	* gst/mxf/mxfmetadata.c: (mxf_metadata_handle_tag),
	(mxf_metadata_preface_handle_tag),
	(mxf_metadata_identification_handle_tag),
	(mxf_metadata_content_storage_handle_tag),
	(mxf_metadata_essence_container_data_handle_tag),
	(mxf_metadata_generic_package_handle_tag),
	(mxf_metadata_source_package_handle_tag),
	(mxf_metadata_track_handle_tag),
	(mxf_metadata_sequence_handle_tag),
	(mxf_metadata_structural_component_handle_tag),
	(mxf_metadata_source_clip_handle_tag),
	(mxf_metadata_dm_segment_handle_tag),
	(mxf_metadata_generic_descriptor_handle_tag),
	(mxf_metadata_file_descriptor_handle_tag),
	(mxf_metadata_generic_picture_essence_descriptor_handle_tag),
	(mxf_metadata_generic_sound_essence_descriptor_handle_tag),
	(mxf_metadata_generic_data_essence_descriptor_handle_tag),
	(mxf_metadata_multiple_descriptor_handle_tag):
	* gst/mxf/mxfparse.c: (mxf_partition_pack_parse),
	(mxf_index_table_segment_parse), (mxf_primer_pack_parse),
	(mxf_local_tag_add_to_hash_table):
	Fix compilation with debugging disabled.

2009-01-05  Mark Nauwelaerts  <mark.nauwelaerts@collabora.co.uk>

	* configure.ac:
	Also mention jp2kenc as a jp2k plugin feature.

2009-01-04  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: Sebastian Pölsterl <sebp at k-d-w dot org>

	* sys/dvb/dvbbasebin.c: (dvb_base_bin_init),
	(dvb_base_bin_finalize), (dvb_base_bin_activate_program),
	(dvb_base_bin_pmt_info_cb), (dvb_base_bin_pad_added_cb),
	(dvb_base_bin_program_destroy):
	Fix some memory leaks. Fixes bug #566356.

2009-01-02  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Olivier Crete <tester at tester dot ca>

	* gst/rtpmanager/gstrtpsession.c:
	(gst_rtp_session_setcaps_send_rtp), (create_send_rtp_sink):